--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="https://github.com/yansantos0" target="_blank">
                 <img src="./assets/icons8-github-50.png" alt="github">
             </a>
-            <a href="https://github.com/yansantos0" target="_blank">
+            <a href="https://www.instagram.com/yan_santos0?igsh=MXFpZHd5YXJjZXQxMQ==" target="_blank">
                 <img src="./assets/icons8-instagram-50.png" alt="github">
             </a>
             <a href="https://github.com/yansantos0" target="_blank">
