--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="https://www.instagram.com/yan_santos0?igsh=MXFpZHd5YXJjZXQxMQ==" target="_blank">
                 <img src="./assets/icons8-instagram-50.png" alt="github">
             </a>
-            <a href="https://github.com/yansantos0" target="_blank">
+            <a href="https://web.whatsapp.com/send?phone=5571999619899" target="_blank">
                 <img src="./assets/icons8-whatsapp-64.png" alt="github">
             </a>
         </div>
